# bomberman-sdl2

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.txt  appveyor.yml
.github/workflows/: ccpp.yml
cmake/: ConfigSafeGuards.cmake
icons/: icon.icns
src/: CMakeLists.txt  Const.h  Game.cpp  Game.h  main.cpp
src/Core/: Animation.cpp  Animation.h
src/Entities/: Creature.cpp  Creature.h  Enemy.cpp  Enemy.h  Music.cpp  Music.h  Object.cpp  Object.h  Player.cpp  Player.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h
src/Managers/: AssetManager.cpp  AssetManager.h  SceneManager.cpp  SceneManager.h
src/Scenes/: GameOverScene.cpp  GameOverScene.h  LevelScene.cpp  LevelScene.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  StageScene.cpp  StageScene.h
src/Util/: Pathfinding.cpp  Pathfinding.h
